crates/cli/tests/snapshots/logs__logs_all_prefixes_initial_tail_when_only_one_file_exists.snap
---
source: crates/cli/tests/logs.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "daemon | daemon ready\n",
    stderr: "",
}
