crates/cli/tests/snapshots/logs__logs_defaults_to_daemon_sources.snap
---
source: crates/cli/tests/logs.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "daemon | daemon two\nlaunchd:stdout | stdout one\nlaunchd:stderr | stderr one\n",
    stderr: "",
}
