crates/cli/tests/snapshots/logs__logs_gateway_tails_plain_rotated_access_and_error_logs.snap
---
source: crates/cli/tests/logs.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "gateway:access | access plain recent\ngateway:access | access generic rotated\ngateway:access | access active old\ngateway:access | access active latest\ngateway:error | error plain middle\ngateway:error | error plain recent\ngateway:error | error active old\ngateway:error | error active latest\n",
    stderr: "",
}
