crates/cli/tests/snapshots/logs__logs_gateway_uses_combined_fallback.snap
---
source: crates/cli/tests/logs.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "gateway two\n",
    stderr: "",
}
