crates/cli/tests/snapshots/logs__logs_rejects_negative_lines.snap
---
source: crates/cli/tests/logs.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: log line count must be zero or greater\n",
}
