crates/cli/tests/snapshots/logs__logs_reports_missing_selected_source.snap
---
source: crates/cli/tests/logs.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "No log files found for gateway\n",
    stderr: "",
}
