crates/cli/tests/snapshots/logs__logs_resource_alias_requires_track_when_ambiguous.snap
---
source: crates/cli/tests/logs.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: multiple postgres tracks are installed; pass --track with one of: 15, 16\n",
}
