crates/cli/tests/snapshots/logs__logs_resource_latest_resolves_manifest_default_track.snap
---
source: crates/cli/tests/logs.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "postgres ready\n",
    stderr: "",
}
