crates/cli/tests/snapshots/logs__logs_without_daemon_logs_suggests_setup_on_a_terminal.snap
---
source: crates/cli/tests/logs.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "○  No PV daemon logs found\n   ↳ start  pv setup\n",
    stderr: "",
}
