crates/cli/tests/snapshots/logs__logs_worker_latest_uses_global_default_track.snap
---
source: crates/cli/tests/logs.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "worker ready\n",
    stderr: "",
}
